--- a/src/static/style/_body.scss
+++ b/src/static/style/_body.scss
@@ -22,17 +22,20 @@
     }
 
     .cards {
+      text-align: -webkit-center;
       .card {
+        margin-bottom: 15px;
         display: block;
         background: rgb(255, 255, 255);
         border-radius: 15px;
-        left: 26px;
         top: -20px;
         z-index: 72;
-        width: 270px;
-        height: 405px;
+        width: 90vw;
+        height: 400px;
         position: relative;
         box-shadow: 2px 2px 5px #c3c3c3;
+        text-align: center;
+        text-transform: uppercase;
 
         .card-header {
           background-color: lighten($rose, 5);
@@ -52,19 +55,126 @@
             font-weight: 300;
             font-family: Roboto Thin;
             font-size: 20px;
-            color: rgb(85, 82, 82);
+            color: $grey;
             font-style: normal;
           }
         }
 
         .card-body {
+          display: grid;
+          padding: 10px;
+          grid-template-columns: 1fr 1fr 1fr;
+          justify-items: center;
           .card-icon {
+            text-align: center;
+            width: 75px;
+            img {
+              margin: 0 auto;
+            }
             p {
               margin: 0;
               font-family: Roboto Thin;
               font-size: 10px;
             }
           }
+        }
+
+        .divider {
+          height: 1px;
+          width: 70%;
+          background-color: #c3c3c3;
+          margin: 10px auto;
+        }
+
+        .preco {
+          padding: 5px;
+          p{
+            text-align: center;
+            &:nth-child(1) {
+              color: $red;
+              font-size: 40px;
+              font-weight: bolder;
+              margin: 0;
+            }
+            &:nth-child(2) {
+              color: $grey;
+            }
+            &:nth-child(3) {
+              color: $grey;
+              font-size: 10px;
+            }
+          }
+        }
+
+        .assign-button {
+          text-decoration: none;
+          background-color: $red;
+          padding: 10px 25px;
+          border: none;
+          outline: none;
+          border-radius: 20px;
+          color: #fff;
+          font-size: 18px;
+          margin: 20px auto;
+          position: relative;
+          top: 30px;
+          box-shadow: 2px 2px 2px #c3c3c3;
+          transition: all 500ms;
+          cursor: pointer;
+
+          &:hover {
+            background-color: darken($red, 5);
+            box-shadow: 3px 3px 5px #c3c3c3;
+            transform: translateY(5px);
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 360px) {
+
+}
+
+@media screen and (min-width: 375px) {
+
+}
+
+@media screen and (min-width: 411px) {
+
+}
+
+@media screen and (min-width: 768px) {
+  .body {
+    .cards {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+
+      .card {
+        height: 405px;
+        width: 20vw;
+        box-shadow: 2px 2px 6px $grey;
+        transition: all 400ms;
+
+        &:hover {
+          box-shadow: 4px 4px 10px $grey;
+        }
+
+        &:nth-child(1) {
+          justify-self: end;
+        }
+
+        &:nth-child(2) {
+          justify-self: center;
+        }
+
+        &:nth-child(3) {
+          justify-self: start;
+        }
+
+        .card-body {
+          padding: 10px 5px;
         }
       }
     }
